update projeto tela de cliente , cnh, tela de disponiveis

--- a/velocity/src/main/webapp/pages/clientes/lista.xhtml
+++ b/velocity/src/main/webapp/pages/clientes/lista.xhtml
@@ -378,7 +378,7 @@
                     </h:panelGrid>
                     <h:panelGrid columns="1">
                         <p:outputLabel value="Emissão:" for="emissao" />
-                        <p:calendar id="emissao" value="#{cadHabilitacaoBean.cadHabilitacao.emissao}" title="Emissao" required="true" pattern="dd/MM/yyyy" locale="pt" />
+                        <p:calendar id="emissao" value="#{clienteBean.cadHabilitacao.emissao}" title="Emissao" required="true" pattern="dd/MM/yyyy" locale="pt" />
                     </h:panelGrid>
                     <p:spacer width="40" />
                     <p:spacer width="40" />
